terraform/sgs.tf
 # Creating a security group for our Jenkins machines
resource "aws_security_group" "jenkins" {
  name        = "jenkins"
  description = "Security group for Jenkins"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Opening all ports for self to be able to connect Jenkins slave without any issues
resource "aws_security_group_rule" "self" {
  type = "ingress"
  protocol = "-1"
  from_port = 1
  to_port = 65535
  self = true
  security_group_id = "${aws_security_group.jenkins.id}"
}
